--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "VTOP_REDACTED",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.6"
   },
   "author": "Jay Kumar",
   "license": "ISC"
